# oclgpu

./: .gitignore  Cargo.toml  README  build.rs  modern_bert_gpu_res.txt
src/: lib.rs  main.rs  utils.rs
src/matrix/: kernels.rs  mod.rs  operations.rs  types.rs
src/neural/: embeddings.rs  mod.rs
src/opencl/: bindings.rs  callbacks.rs  mod.rs  types.rs  utils.rs
